k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spend-sense-ingress
  namespace: spend-sense
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "spend-sense-redirect-to-https@kubernetescrd"
    traefik.ingress.kubernetes.io/buffering: |
      maxRequestBodyBytes = 10485760
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - spendsense.duckdns.org
      secretName: spend-sense-tls
  rules:
    - host: spendsense.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: backend
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
